lib/tests/fixtures/compiler/parser/break_in_application.baseline
Error: break_in_application.pp:3:9: break statement cannot be used inside an application statement.
  break
  ^~~~~
