lib/tests/fixtures/compiler/parser/break_in_application.pp
application foo() {
    if true {
        break
    }
}
